log
sá., 23 de abr. de 2022 18:47:22: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  8|7
total_score: 10/70
6ab47f0
sá., 23 de abr. de 2022 18:55:42: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|6
total_score: 10/70
aab157b
sá., 23 de abr. de 2022 18:57:01: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|5
total_score: 15/70
35a35b3
sá., 23 de abr. de 2022 18:58:09: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:118:28: error: 'key' undeclared (first use in this function)
       if (tree->lower_than(key, aux->pair->key) == 1)
                            ^~~
treemap.c:118:28: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
dca7201
sá., 23 de abr. de 2022 19:00:44: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:118:31: error: 'TreeNode {aka struct TreeNode}' has no member named 'key'
       if (tree->lower_than(aux->key, aux->pair->key) == 1)
                               ^~
treemap.c:122:49: error: 'key' undeclared (first use in this function)
       else if(tree->lower_than(aux->pair->key , key) == 1)
                                                 ^~~
treemap.c:122:49: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
214b7ea
sá., 23 de abr. de 2022 19:04:58: 
 treemap.c | 19 ++++---------------
 1 file changed, 4 insertions(+), 15 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:119:15: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
        return minimum(aux);
               ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
28fd5f8
sá., 23 de abr. de 2022 19:05:43: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|5
total_score: 15/70
1882349
sá., 23 de abr. de 2022 19:08:00: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  14|5
total_score: 20/70
2d3e00c
